WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39781
[Qt] ClipboardQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39781
Summary
[Qt] ClipboardQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:39:09 PDT
WebCore/platform/qt/ClipboardQt.cpp:32: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ClipboardQt.cpp:42: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ClipboardQt.cpp:52: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ClipboardQt.cpp:229: Should have a space between // and comment [whitespace/comments] [4] WebCore/platform/qt/ClipboardQt.cpp:236: Declaration has space between type name and * in QPixmap *pixmap [whitespace/declaration] [3] Total errors found: 5 in 1 files
Attachments
Patch that fixes the coding style issues
(2.53 KB, patch)
2010-05-26 14:47 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(2.62 KB, patch)
2010-06-04 20:26 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:47:30 PDT
Created
attachment 57162
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:54:20 PDT
QtTriaged
David Levin
Comment 3
2010-05-27 11:10:50 PDT
Comment on
attachment 57162
[details]
Patch that fixes the coding style issues
> No new tests. (OOPS!)
Ditto.
Anders Bakken
Comment 4
2010-06-04 20:26:35 PDT
Created
attachment 57957
[details]
Patch
Eric Seidel (no email)
Comment 5
2010-06-04 22:12:38 PDT
Comment on
attachment 57957
[details]
Patch What's this for? // WebCore::writeURL(m_writableDataObject.get(), url, title, true, false); generally we don't commit commented-out code, it's possible that line should simply be removed.
WebKit Commit Bot
Comment 6
2010-06-09 12:13:08 PDT
Comment on
attachment 57957
[details]
Patch Clearing flags on attachment: 57957 Committed
r60905
: <
http://trac.webkit.org/changeset/60905
>
WebKit Commit Bot
Comment 7
2010-06-09 12:13:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug