2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] ClipboardQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39781

        * platform/qt/ClipboardQt.cpp:
        (WebCore::ClipboardQt::declareAndWriteDragImage):

Canonical link: https://commits.webkit.org/51920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60905 268f45cc-cd09-0410-ab3c-d52691b4dbfc